Fix the maximum port number in the SSH Manager plugin

It should be in the System Ports 0-1023 or User Ports 1024-49151 ranges.

See:
https://en.wikipedia.org/wiki/Registered_port
https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml

BUG: 441889
FIXED-IN: 21.12